--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -2,6 +2,6 @@ Hello {{person.name}}
 
 <form id="invite" action="/friends/invite" method="POST"> 
     <label for="email"> Enter Friend's Email:</label>
-    <input type="url" id="email" name="email">
+    <input type="email" id="email" name="email">
     <button type="submit" value="submit">Submit </button>
 </form>
