--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,6 +1,6 @@
 
 <h1>Hello {{person.name}}</h1>
-<form id="form1" action="" method="POST"> 
+<form id="form1" action="/friends/invite" method="POST"> 
     <label for="email"> Enter Friend's Email:</label>
     <input type="email" id="email" name="email">
     <button type="submit" value="submit">Submit </button>
