--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -5,3 +5,7 @@ Hello {{person.name}}
     <input type="email" id="email" name="email">
     <button type="submit" value="submit">Submit </button>
 </form>
+
+<section>
+    Number of friends: {{friends.length}}
+</section>
