--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,1 +1,12 @@
-<a href="/login"><button>CLICK TO LOGIN/SIGNUP</button></a>
+<div class="page-container">
+    <div class="profile">
+        <h1 id="title">js-bank</h1>
+        <p>A bank app from the future that uses emails</p>
+    </div>
+    <div class="money">
+        <div class="login">
+        <h3>Login/Signup to start your new money experience</h3>
+        <a\href="/login"><button>CLICK TO LOGIN/SIGNUP</button></a>
+          <div>
+    </div>
+</div>
