--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;900&display=swap" rel="stylesheet">
+    </head> 
     {{{body}}}
 </html>
